--- a/css/styles-header.css
+++ b/css/styles-header.css
@@ -623,8 +623,7 @@
      flex: 1;
      min-height: 0;
      overflow-x: hidden;
-     -webkit-overflow-scrolling: touch;
-     will-change: scroll-position;
+    will-change: scroll-position;
  }
  
  .lang-scroll::-webkit-scrollbar {
